[package]

name = "mount"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
version = "0.0.6"
description = "Mounting middleware for Iron."
repository = "https://github.com/iron/mount"
documentation = "http://ironframework.io/doc/mount/index.html"
license = "MIT"

[dependencies]
url = "*"
sequence_trie = "*"


[dependencies.iron]
git = "https://github.com/iron/iron.git"